Min.Tests/Samples/ValidSamples/source-05.min
.year int = 2024
.year = 2023

output .year