Min.Tests/Samples/InvalidSamples/source-03.min
.year int = 2024
.year = "2024"